# CodInsa-Qualifications

./: CMakeLists.txt  README.md  xmake.lua
2023/: 1-reception-des-convives.cpp
include/2023/1 - Reception des convives/: Answer.hpp
include/2023/2 - Decoupe du camembert normand AOP/: Answer.hpp
include/common/: Input.hpp  Questions.hpp
src/: Main.cpp
src/2023/1 - Reception des convives/: Answer.cpp
src/2023/2 - Decoupe du camembert normand AOP/: Answer.cpp
src/common/: Input.inl  QuestionManager.inl  Questions.cpp
